modify exp-leaderboard - always full now

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -31,8 +31,8 @@ body {min-width:300px;margin-top:50px;padding-top:20px}
 .takeover-hdr-wrap{margin-top:-20px}
 
 // *** EXP LEADERBOARD
-div.expldrbrd{display:block;overflow:hidden;margin:5px auto;border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px}
-div.expldrbrd a img{max-width:660px;width:100%;height:auto;border:0}
+div.expldrbrd{display:block;margin:10px auto;border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px}
+div.expldrbrd a img{max-width:100%;height:auto;border:0;margin:auto;}
 
 /**** common styles ****/
 img {width:auto;height:auto}
