--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -440,6 +440,63 @@ ul.search-result-list li a:hover{ border-left:2px solid @blue;padding-left:8px }
 .search-filter-left div.radio:hover,
 .search-filter-right div.checkbox:hover { background: rgba(255,255,255, 0.3)}
 
+
+
+
+
+// Summer Promo 2016 Casino Chip
+.sum-promo-casino-chip {
+    -webkit-animation: chipMove;
+    -moz-animation: chipMove;
+    -o-animation: chipMove;
+    animation: chipMove;
+    animation-iteration-count: 1;
+    animation-duration: 9s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+    transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0,0,0);
+    opacity:0;
+    height: 0;
+    position: relative;
+    display: block;
+    overflow: hidden;
+    text-align: center;
+    margin: auto;
+}
+
+// modified in media queries for xs screens
+@-webkit-keyframes chipMove{
+    0% { height: 0; opacity: 0; }
+    10% { height: 165px; opacity: 1; }
+    90% { height: 165px; opacity: 1; }
+    100% { height: 0; opacity: 0; }
+}
+@-moz-keyframes chipMove{
+    0% { height: 0; opacity: 0; }
+    10% { height: 165px; opacity: 1; }
+    90% { height: 165px; opacity: 1; }
+    100% { height: 0; opacity: 0; }
+}
+@-o-keyframes chipMove{
+    0% { height: 0; opacity: 0; }
+    10% { height: 165px; opacity: 1; }
+    90% { height: 165px; opacity: 1; }
+    100% { height: 0; opacity: 0; }
+}
+@keyframes chipMove{
+    0% { height: 0; opacity: 0; }
+    10% { height: 165px; opacity: 1; }
+    90% { height: 165px; opacity: 1; }
+    100% { height: 0; opacity: 0; }
+}
+
+// End Summer Promo Casino Chip
+
+
+
+
+
 /* ==========================================================================
    Sidebar
    ========================================================================== */
