--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -451,7 +451,7 @@ ul.search-result-list li a:hover{ border-left:2px solid @blue;padding-left:8px }
     -o-animation: chipMove;
     animation: chipMove;
     animation-iteration-count: 1;
-    animation-duration: 9s;
+    animation-duration: .25s;
     animation-timing-function: ease-out;
     animation-fill-mode: forwards;
     transform: translate3d(0,0,0);
@@ -468,27 +468,19 @@ ul.search-result-list li a:hover{ border-left:2px solid @blue;padding-left:8px }
 // modified in media queries for xs screens
 @-webkit-keyframes chipMove{
     0% { height: 0; opacity: 0; }
-    10% { height: 165px; opacity: 1; }
-    90% { height: 165px; opacity: 1; }
-    100% { height: 0; opacity: 0; }
+    100% { height: 165px; opacity: 1; }
 }
 @-moz-keyframes chipMove{
     0% { height: 0; opacity: 0; }
-    10% { height: 165px; opacity: 1; }
-    90% { height: 165px; opacity: 1; }
-    100% { height: 0; opacity: 0; }
+    100% { height: 165px; opacity: 1; }
 }
 @-o-keyframes chipMove{
     0% { height: 0; opacity: 0; }
-    10% { height: 165px; opacity: 1; }
-    90% { height: 165px; opacity: 1; }
-    100% { height: 0; opacity: 0; }
+    100% { height: 165px; opacity: 1; }
 }
 @keyframes chipMove{
     0% { height: 0; opacity: 0; }
-    10% { height: 165px; opacity: 1; }
-    90% { height: 165px; opacity: 1; }
-    100% { height: 0; opacity: 0; }
+    100% { height: 165px; opacity: 1; }
 }
 
 // End Summer Promo Casino Chip
