update placement and styles of studio sponsor

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -130,7 +130,8 @@ span.glyphicon-play {font-size:0.7em}
 .strm-spnsr a{max-height:100%;display:block}
 .strm-spnsr a img{width:auto;height:auto;max-height:60px;}
 
-.studio-sponsor a img{width:auto;height:auto;max-width:150px;max-height:100px;}
+.studio-sponsor {margin: 30px auto;}
+.studio-sponsor a img{max-width:100%;height:auto;}
 /******end listen live button*********/
 
 /*make facebook boxes responsive etc ******/
