update PTO layout

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -25,10 +25,11 @@ body {min-width:300px;margin-top:50px;padding-top:20px}
 
 // *** PAGE TAKE OVER see custom.php for updated css from admin options
 .takeover{width:100%}
-.takeover-hdr1{width:100%;max-width:1000px;height:100px;overflow:hidden}
-.takeover-hdr2{width:100%;max-width:1000px;height:auto;overflow:hidden;}
-.takeover-hdr a, .takeover a img {}
-.takeover-hdr-wrap{margin-top:-20px}
+//.takeover-hdr1{width:100%;max-width:1000px;height:100px;overflow:hidden}
+//.takeover-hdr2{width:100%;max-width:1000px;height:auto;overflow:hidden;}
+.takeover-hdr { }
+.takeover-hdr img { max-width:100%; height:auto; }
+.takeover-hdr-wrap{margin-top:-8px; margin: auto; text-align: center;}
 
 // *** EXP LEADERBOARD
 div.expldrbrd{display:block;margin:10px auto;border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px}
@@ -958,7 +959,6 @@ div.ginput_complex label {
     body.admin-bar .navbar-fixed-top { top: 46px !important; }
     //shrink page header text
     .page-header h1, .page-header h2, .page-header h3, .page-header h4, .page-header h5, .page-header h6 { font-size:1.1em;}
-    .takeover-hdr-wrap{margin-top:-8px;}
     .sticker-logo{z-index:100 !important;position:relative;top:-100px;left:40px;height:0;overflow:visible;}
     .stickeron-img{max-width:120px;height:auto;}
     .stickeron-info{position:relative;top:-400px;left:150px;z-index: -10;}
