add buddypress fn and styles, and user loginout to base.php

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -23,6 +23,19 @@ body {min-width:300px;margin-top:50px;padding-top:20px}
     z-index:0;
 }
 
+#buddypress,
+.buddypress.register,
+.buddypress.activate,
+.buddypress.activity,
+.buddypress.members,
+.buddypress.register {
+    .content {
+        background: #fff;
+    }
+}
+body.gfactivate { background: #fff; margin: 2%; padding: 2%; }
+
+
 // *** PAGE TAKE OVER see custom.php for updated css from admin options
 .takeover{width:100%}
 //.takeover-hdr1{width:100%;max-width:1000px;height:100px;overflow:hidden}
