added Youtube-TV javascript to load Youtube playlist with list for Micki Free

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -502,6 +502,32 @@ ul.search-result-list li a:hover{ border-left:2px solid @blue;padding-left:8px }
 
 
 
+// Micki Free
+.mickis-free-ride .in-cnt-wrp,
+.mickis-free-ride .pg-content,
+.contact-micki-free .in-cnt-wrp,
+.contact-micki-free .pg-content,
+.win-micki-free-latest-album .in-cnt-wrp,
+.win-micki-free-latest-album .pg-content,
+.win-micki-free-latest-album .entry-content{
+    background: #000;
+    color: #fff;
+}
+.micki-free-forms{
+    color:#ff0000;
+    width: 95%;
+}
+.micki-free-forms_wrapper.gform_validation_error .micki-free-forms label{
+    color:#ff0000;
+}
+.micki-free-forms_wrapper.gform_validation_error .micki-free-forms li.gfield_error{
+    border:0;
+    background-color:rgba(255,223,224,.15);
+}
+.micki-free-forms .validation_message{
+    color:#fff000;
+}
+
 
 
 /* ==========================================================================
