--- a/wp-content/themes/genexus/sass/site-header/_site-header.scss
+++ b/wp-content/themes/genexus/sass/site-header/_site-header.scss
@@ -66,7 +66,7 @@
 
 			//logo img responsive within container
 			img.logo {
-				max-width: 240px;
+				max-width: 200px;
 				height:auto;
 
 				@include grid-media($gx-grid-md){
@@ -101,7 +101,7 @@
 
 			i {
 				font-size: 20px;
-				color: $blue-ltr;
+				color: $kmgn-purple;
 			}
 
 			border-radius: 12px;
@@ -393,7 +393,7 @@
       outline: none;
       padding: 5px 10px;
       font-size: 0.8em;
-      background: $red;
+      background: $search-btn;
 
       img {
         height: 12px;
