minor style updates

--- a/wp-content/themes/genexus/sass/utilities/variables/_colors.scss
+++ b/wp-content/themes/genexus/sass/utilities/variables/_colors.scss
@@ -9,6 +9,7 @@ $kmgn-orange-lt: #faaf40;
 $kmgn-purple: #93298e;
 $kmgn-purple-dk: #7f257a;
 $search-btn: $kmgn-purple;
+$kmgn-firey-grad: linear-gradient(to bottom right, #ffa646, #db4047 17%, #741a44 48%, #671462 100%);
 
 //Genexus / Neat / Defaults
 $color-alto: #ddd;
