MF clips using BS still

--- a/wp-content/themes/genexus/sass/pages/_mickis-free-ride.scss
+++ b/wp-content/themes/genexus/sass/pages/_mickis-free-ride.scss
@@ -25,10 +25,12 @@
     color:#fff000;
 }
 
-// .micki-free {
-// 	.row {
-// 		@include grid-container;
-// 	}
+
+// .mf-cur-vid,
+// .mf-clips-wrap,
+// #youtube-channel-pagination {
+// 	@include grid-container;
+// }
 
 // 	@include grid-media($gx-grid-xl){
 // 		.col-* { @include grid-column(3); }
@@ -45,4 +47,3 @@
 
 
 
-// }
