--- a/wp-content/plugins/advanced-youtube-channel-pagination/channel-styles.css
+++ b/wp-content/plugins/advanced-youtube-channel-pagination/channel-styles.css
@@ -36,7 +36,7 @@ Contributors: Balasaheb Bhise
     /*background-color: rgba(255,255,255,.02);*/
     margin: auto;
     text-align: center;
-    border-bottom:1px solid #333;
+    //border-bottom:1px solid #333;
 }
 
 #youtube-channel-pagination .display-watch-video iframe{
@@ -75,6 +75,10 @@ Contributors: Balasaheb Bhise
 #youtube-channel-pagination #yc-pagination-watch{
     padding-top: 20px;
     /*background-color: #fcfcfc;*/
+}
+
+#yc-pagination-watch {
+    border-top: 1px solid #333;
 }
 
 
