changed kaff news bg color on home

--- a/wp-content/themes/genexus/sass/pages/_front-page.scss
+++ b/wp-content/themes/genexus/sass/pages/_front-page.scss
@@ -468,7 +468,7 @@ $song-request-color-hover: $kmgn-purple-dk;
   }
 
   overflow: hidden;
-  background: $gray-dkr;
+  //background: transparentize($kmgn-purple,.5);
 
 }//.kaff-news-feed
 
